--- a/module2-assignment/index.html
+++ b/module2-assignment/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>module2-assignment</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 <h1>Our Menu</h1>
