module 2 assidngment done

--- a/module2-assignment/index.html
+++ b/module2-assignment/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>module2-assignment</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<header>
 <h1>Our Menu</h1>
-<section>Chicken</section>
-<section>Beef</section>
-<section>Sushi</section>
+</header>
+
+<div class="col">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="menu">
+			<section class="title1">
+				<h3>Chicken</h3>
+			</section>
+			<section class="text">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco.</p>
+			</section>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="menu">
+			<section class="title2">
+				<h3>Beef</h3>
+			</section>
+			<section class="text">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco.</p>
+			</section>
+		</div>
+	</div>
+	<div class="col-lg-4 col-md-12 col-sm-12">
+		<div class="menu">
+			<section class="title3">
+				<h3>Sushi</h3>
+			</section>
+			<section class="text">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco.</p>
+			</section>
+		</div>
+	</div>
+</div>
 </body>
 </html>
