--- a/module4-assignment/index.html
+++ b/module4-assignment/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Module 4 assignment</title>
+	<script src="sayHello.js"></script>
+	<script src="sayGoodbye.js"></script>
+	<script src="script.js"></script>
 </head>
 <body>
 
