--- a/module4-assignment/index.html
+++ b/module4-assignment/index.html
@@ -8,6 +8,7 @@
 	<script src="script.js"></script>
 </head>
 <body>
-
+    <h1>Module 4 Assignment</h1>
+    <h2>Open the console to check assignment</h2>
 </body>
 </html>
